[tool.poetry]
name = "beesite"
version = "2.0.0"
description = "BeeStation13 Website"
authors = ["Qwertyquerty", "Crossedfall"]
license = "APACHE"
readme = "README.md"
repository = "https://github.com/BeeStation/Website"
packages = [{include = "beesite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
elastic-apm = {version = "~=6.12.0", extras = ["flask"]}
requests = "~=2.27.1"
PyYAML = "~=5.4"
Flask = "~=1.1.1"
Flask-Cors = "~=3.0.10"
uWSGI = "~=2.0.20"
werkzeug = "~=2.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.1"
codespell = "^2.2.4"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.codespell]
count = ""
skip = ".git,.venv,*.lock,.mypy_cache"
builtin = "clear,rare,code,en-GB_to_en-US"
ignore-words-list = "od,ro"
quiet = 3

[tool.mypy]
mypy_path = "bapi"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
