[tool.poetry]
name = "beesite"
version = "2.1.0"
description = "BeeStation13 Website"
authors = ["Qwertyquerty", "Crossedfall"]
license = "APACHE"
readme = "README.md"
repository = "https://github.com/BeeStation/Website"
packages = [{include = "beesite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
elastic-apm = {version = "^6.23.0", extras = ["flask"]}
requests = "^2.32.3"
PyYAML = "^6.0.2"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
uWSGI = "^2.0.28"
werkzeug = "^3.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"
codespell = "^2.3.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.codespell]
count = ""
skip = ".git,.venv,*.lock,.mypy_cache,*.js"
builtin = "clear,rare,code,en-GB_to_en-US"
ignore-words-list = "od,ro"
quiet = 3

[tool.mypy]
mypy_path = "bapi"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
